# local-news-mcp

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  pytest.ini  setup_testing.sh  test_runner.sh
knowledge/: query_syntax.md  workflow_guide.md
prompts/: __init__.py  analysis.py  query_enhancement.py
tests/: test_integration.py  test_tools.py
utils/: __init__.py  clustering.py  formatters.py
